Solved an issue where the toggle button on small screens would misalign

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,14 @@
       color: var(--bro-light) !important;
     }
 
+    /* toggle menu styles */
+    .toggle-menu {
+      background-color: var(--dark-bg) !important;
+      color: var(--dark-text);
+      padding: 1rem;
+      font-size: 1.2rem;
+    }
+
     /* Accent button */
     .btn-accent {
       background: var(--secondary);
